...
                       focusManager.clearFocus()
                       onLoginClick(user, pass)
                   },
                   modifier = Modifier
                       .align(Alignment.CenterHorizontally)
                       .fillMaxWidth()
                       .testTag("LoginButton"),

                   ) {
                   Text(text = stringResource(id = R.string.login_button))
               }

               ClickablePartOfText(
...
        ),
        keyboardOptions = KeyboardOptions(
            imeAction = ImeAction.Next,
            keyboardType = KeyboardType.Email
        ),
        modifier = Modifier
            .testTag("userTextField"), // Add test tag for user text field
    )
}

@Composable
private fun StatePasswordTextField(
    value: String,
...
        ),
        visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
        trailingIcon = {
            IconToggleButton(
                checked = passwordVisible,
                onCheckedChange = { passwordVisible = it },
                modifier = Modifier.testTag("passwordVisibilityToggle") // Add tag for the visibility toggle
            ) {
                Crossfade(targetState = passwordVisible) { visible ->
                    if (visible) {
                        Icon(
                            imageVector = Icons.Default.Visibility,
                            tint = if (isError) Color.Red else Color.Black,
...
                }
            }
        },
        keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
        keyboardActions = KeyboardActions(onDone = { keyboardController?.hide() }),
        modifier = Modifier
            .testTag("passwordTextField"), // Add test tag for password text field
    )
}

@Composable
fun ClickablePartOfText(annotatedString: AnnotatedString, center: Boolean = false, onTextClick: () -> Unit) {

...
